fix responsiveness
repaired elements overlaping in phone/tablet views

--- a/css/custom.css
+++ b/css/custom.css
@@ -246,13 +246,6 @@ html, body{
 	to{left: 100%}
 }
 
-.artist-name
-{
-	float: left;
-	margin-top: 55px;
-	margin-left: 25px;
-}
-
 .mission-statement img
 {
 	height: 200px;
@@ -318,13 +311,6 @@ html, body{
 	margin: 15px 0px;
 }
 
-
-.youtube
-{
-	max-height: 100vh;
-	padding: 15px;
-}
-
 i
 {
 	padding: 8px 20px;
@@ -332,7 +318,24 @@ i
 
 .spotify-container
 {
-	margin: 10px;
-	padding: 5px 130px;
+	margin: 0px;
+	padding: 0px 130px;
 	border-top: 1px solid #808080;
+}
+
+.video-container {
+	margin: 30px;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
